Remove product name from and cleanup ListIndexSetsTool